Cambios en páginas de registro y de login

--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ folder.views="../app/Views/"
 folder.data="../app/Data/"
 
 table.rowsPerPage="10"
-db.host="localhost"
+db.host="mariadb"
 db.user="admin"
-db.pass="TravelMatespass"
+db.pass="daw2pass"
 db.schema="TravelMates"
 db.charset="utf8mb4"
 db.emulated="0"
